fix: keep active cell selection in first column from going offscreen
- change cell input to not go off edge
- makes activeCellSelectionBorderWidth a theme variable, so it can be shared with js and css
- change canvas active cell outline to only stick to edge if at left edge of screen, not in any column
- re-style active cell input to match latest input variables
- change outline of input to use selection border color

--- a/packages/iris-grid/src/IrisGrid.scss
+++ b/packages/iris-grid/src/IrisGrid.scss
@@ -14,10 +14,11 @@ $iris-grid-bar-max-height: 250px;
 $iris-grid-bar-max-width: $table-sidebar-max-width;
 $transition-iris-grid-bar-flash: 1s;
 $cell-box-shadow:
-  0 0 0 2px var(--dh-color-accent),
+  0 0 0 $active-cell-selection-border-width
+    var(--dh-color-grid-selection-outline),
   0 0 0 5px accent-opacity(25);
 $cell-invalid-box-shadow:
-  0 0 0 2px var(--dh-color-negative),
+  0 0 0 $active-cell-selection-border-width var(--dh-color-negative),
   0 0 0 5px negative-opacity(25);
 
 .iris-grid {
@@ -134,8 +135,8 @@ $cell-invalid-box-shadow:
     }
 
     .grid-cell-input-field {
-      color: $gray-200;
-      background: $gray-800;
+      color: var(--dh-color-input-fg);
+      background: var(--dh-color-input-bg);
 
       &:focus {
         box-shadow: $cell-box-shadow;
